data/derived/comb/progs/unify/prog0988.ml.out
Characters 29-56:
  wwhile ((failwith "asd", undefined),b);;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
